--- a/app/src/main/res/layout/activity_view1.xml
+++ b/app/src/main/res/layout/activity_view1.xml
@@ -42,7 +42,14 @@
         android:text="calcular porcentaje"
         android:layout_margin="10dp"/>
 
-
+    <TextView
+        android:id="@+id/textviewresultado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        android:textSize="20sp"/>
 
 
 
