--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,4 +84,15 @@
         android:text="Enviar informacion spinner"
         android:layout_margin="10dp"/>
 
+    <Button
+        android:id="@+id/boton_web"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="vista web"
+        android:layout_margin="10dp"/>
+
+
+
+
+
 </LinearLayout>
