--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,6 +105,13 @@
         android:text="vista lista JSON"
         android:layout_margin="10dp"/>
 
+    <Button
+        android:id="@+id/boton_permisos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="vista de permisos"
+        android:layout_margin="10dp"/>
+
 
 
 </LinearLayout>
