--- a/app/src/main/res/layout/activity_vistapermisocontactos.xml
+++ b/app/src/main/res/layout/activity_vistapermisocontactos.xml
@@ -19,4 +19,12 @@
         android:textSize="40sp"
         />
 
+    <Button
+        android:id="@+id/boton_abrircontactos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="abrir contactos"
+        />
+
 </LinearLayout>
