--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -112,6 +112,13 @@
         android:text="vista de permisos"
         android:layout_margin="10dp"/>
 
+    <Button
+        android:id="@+id/boton_basededatos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="base de datos"
+        android:layout_margin="10dp"/>
+
 
 
 </LinearLayout>
